[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.39"
anyhow = "1.0.95"
futures-util = "0.3.31"
clap = { version = "4.0", features = ["derive"] }
